# Auto_Modeling

./: LICENSE.txt  README.md  pyproject.toml
Auto_Modeling/: Model_Building.py  __init__.py
Auto_Modeling/AIC_Sub/: AIC.py
Auto_Modeling/Metrics/: Metrics.py
